# multiservices-items-manager

./: .env.example  docker-compose.yaml
backend/auth/: .env.example  .example.env  .gitignore  Dockerfile  README.md  main.py  requirements.txt
backend/auth/app/core/: config.py  email_utils.py  security.py
backend/auth/app/db/: bd_usuarios.sql  models.py  session.py
backend/auth/app/routers/: auth.py
backend/auth/app/schemas/: user.py
backend/auth/templates/: dashboard.html  index.html  login.html  verify.html
backend/inventory/: .env.example  Cargo.toml  Dockerfile  README.md
backend/inventory/src/: db.rs  handlers.rs  main.rs  models.rs
backend/products/: Dockerfile  compose.yaml  create-product.html
backend/products/app/Models/: Image.php  Product.php
backend/products/bootstrap/: app.php
backend/products/database/factories/: CategoryFactory.php
backend/products/database/migrations/: 2025_11_27_203038_create_categories_table.php  (+2 more)
backend/products/docker-entrypoint-initdb.d/: migrate.sh  wait-for-postgres.sh
backend/products/routes/: api.php
db/: db.sql  dockerfile
frontend/: .env  .env.example  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: Layout.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  authService.js  inventoryService.js  productsService.js
frontend/src/stores/: auth.js
frontend/src/utils/: security.js
frontend/src/views/: DashboardView.vue  InventoryView.vue  LoginView.vue  ProductsView.vue  RegisterView.vue
(+6 files in other folders)
