[package]
name = "inventory"
version = "0.1.0"
edition = "2025"

[dependencies]

axum = "0.8.7"
tokio = { version = "<latest-version>", features = ["full"] }
tower = "0.5.2"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde = {version = "1.0", features = ["derive"] }
dotenvy = "0.15"
